# skillmind

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: gh-api.skill.md
skillmind/: __init__.py  cli.py
skillmind/analyzer/: patterns.py
skillmind/generator/: skill_writer.py
skillmind/telemetry/: claude_code.py
tests/: test_analyzer.py  test_telemetry.py
